# trending_technology_market_news_in_html_format

./: .gitignore  README.md  pyproject.toml
src/trending_technology_market_news_in_html_format/: crew.py  main.py
src/trending_technology_market_news_in_html_format/config/: agents.yaml  tasks.yaml
