[project]
name = "trending_technology_market_news_in_html_format"
version = "0.1.0"
description = "trending_technology_market_news_in_html_format using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
trending_technology_market_news_in_html_format = "trending_technology_market_news_in_html_format.main:run"
run_crew = "trending_technology_market_news_in_html_format.main:run"
train = "trending_technology_market_news_in_html_format.main:train"
replay = "trending_technology_market_news_in_html_format.main:replay"
test = "trending_technology_market_news_in_html_format.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
